match timer added